fix delete scrollbar in firefox

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -98,11 +98,7 @@ p {
   font-display: swap;
 }
 
-html {overflow: -moz-scrollbars-none;}
-
 body {
-  overflow: -moz-scrollbars-none;
-
   font-family: 'Roboto', sans-serif;
   color: #fff;
   font-size: 16px;
@@ -149,6 +145,7 @@ body {
   z-index: 5;
   max-height: 100px;
   height: 100%;
+  overflow: -moz-scrollbars-none;
   overflow: auto;
 }
 
